// Copyright 2019 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package arquebus.config;

import "google/protobuf/duration.proto";

option go_package = "config";

// Config is the service-wide configuration data for Arquebus
message Config {
    // AccessGroup is the luci-auth group who has access to admin pages and
    // APIs.
    string access_group = 1;

    // The endpoint for Monorail APIs.
    string monorail_hostname = 2;

    // A list of Assigner config(s).
    repeated Assigner assigners = 3;

    // The endpoint for RotaNG APIs.
    string rotang_hostname = 4;
}

// IssueQuery describes the issue query to be used for searching unassigned
// issues in Monorail.
message IssueQuery {
  // Free-form text query.
  string q = 1;
  // String name of the projects to search issues for, e.g. "chromium".
  repeated string project_names = 2;
}

// Oncall represents a rotation shift modelled in RotaNG.
message Oncall {
  // The name of a rotation.
  string rotation = 1;

  enum Position {
    UNSET = 0;
    PRIMARY = 1;
    SECONDARY = 2;
  }
  // The oncall position in the shift.
  Position position = 2;
}

// UserSource represents a single source to find a valid Monorail user to whom
// Arquebus will assign or cc issues found.
message UserSource {
  oneof from {
    Oncall oncall = 1;

    // user refers to the email address of a Monorail user account.
    string email = 2; // e.g., user@chromium.org
  }
}

// Assigner contains specifications for an Assigner job.
message Assigner {
  // The unique ID of the Assigner.
  //
  // This value will be used in URLs of UI, so keep it short. Note that
  // only lowercase alphabet letters and numbers are allowed. A hyphen may
  // be placed between letters and numbers.
  string id = 1;

  // An email list of the owners of the Assigner.
  repeated string owners = 2;

  // The duration between the start of an Assigner run and the next one.
  //
  // This value should be at least a minute long.
  google.protobuf.Duration interval = 3;

  // IssueQuery describes the search criteria to look for issues to assign.
  IssueQuery issue_query = 4;

  // If multiple values are specified in assignees, Arquebus iterates the list
  // in the order until it finds a currently available assignee. Note that
  // Monorail users are always assumed to be available.
  repeated UserSource assignees = 6;
  // If multiple values are specified in ccs, all the available roations and
  // users are added to the CC of searched issues.
  repeated UserSource ccs = 7;

  // If DryRun is set, Assigner doesn't update the found issues.
  bool dry_run = 8;

  // The description shown on UI.
  string description = 9;

  // Comment is an additional message that is added to the body of the issue
  // comment that is posted when an issue gets updated.
  string comment = 10;
}
